# data-engineering-pipeline-test

./: README.md
data-engineer-pipeline/: Dockerfile  Jenkinsfile  compose.yml  pyproject.toml
data-engineer-pipeline/data_engineer_pipeline/: etl.py  sensor_data_20240828_222904.csv  test_etl.py
