[tool.poetry]
name = "data-engineer-pipeline"
version = "0.1.0"
description = ""
authors = ["Parth Sinha <sinhaparth555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
